Update api server configuration and refactor catalog product data components
